// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots JobCard renders a JobCard 1`] = `
<div
  className="job-entry"
  style={
    Object {
      "WebkitTapHighlightColor": "rgba(0,0,0,0)",
      "backgroundColor": "#ffffff",
      "borderRadius": 2,
      "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
         0 1px 4px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "color": "rgba(0, 0, 0, 0.87)",
      "fontFamily": "Roboto, sans-serif",
      "muiPrepared": true,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "zIndex": 1,
    }
  }
>
  <div
    style={
      Object {
        "paddingBottom": 0,
      }
    }
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "fontWeight": 500,
          "muiPrepared": true,
          "padding": 16,
          "position": "relative",
          "whiteSpace": "nowrap",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "muiPrepared": true,
            "paddingRight": "90px",
            "verticalAlign": "top",
            "whiteSpace": "normal",
          }
        }
      >
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "display": "block",
              "fontSize": 15,
              "muiPrepared": true,
            }
          }
        >
          UI Developer
        </span>
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "display": "block",
              "fontSize": 14,
              "muiPrepared": true,
            }
          }
        >
          Quantified @ Menlo Park, CA
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshots LifeCycleBoard renders 4 Columns and Calls Subcomponents 1`] = `
<div>
  <div
    className="container"
  >
    <div
      className="col-sm-3 col-xs-6"
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#ffffff",
            "borderRadius": 2,
            "boxShadow": "0 14px 45px rgba(0, 0, 0, 0.25),
         0 10px 18px rgba(0, 0, 0, 0.22)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "padding": 16,
            "textAlign": "center",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        Interest
      </div>
      <div>
        <li>
          UI Developer
           at 
          Vlocity
        </li>
        <li>
          Front End Developer
           at 
          RHLA Technology
        </li>
        <li>
          Front End UI Developer
           at 
          Ladeeda
        </li>
      </div>
    </div>
    <div
      className="col-sm-3 col-xs-6"
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#ffffff",
            "borderRadius": 2,
            "boxShadow": "0 14px 45px rgba(0, 0, 0, 0.25),
         0 10px 18px rgba(0, 0, 0, 0.22)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "padding": 16,
            "textAlign": "center",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        Applied
      </div>
      <div>
        <h2>
          Applied
        </h2>
      </div>
    </div>
    <div
      className="col-sm-3 col-xs-6"
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#ffffff",
            "borderRadius": 2,
            "boxShadow": "0 14px 45px rgba(0, 0, 0, 0.25),
         0 10px 18px rgba(0, 0, 0, 0.22)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "padding": 16,
            "textAlign": "center",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        Interview
      </div>
    </div>
    <div
      className="col-sm-3 col-xs-6"
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#ffffff",
            "borderRadius": 2,
            "boxShadow": "0 14px 45px rgba(0, 0, 0, 0.25),
         0 10px 18px rgba(0, 0, 0, 0.22)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "padding": 16,
            "textAlign": "center",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        Post-Interview
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshots List should render fakeData Jobs 1`] = `
<div>
  <li>
    UI Developer
     at 
    Vlocity
  </li>
  <li>
    Front End Developer
     at 
    RHLA Technology
  </li>
  <li>
    Front End UI Developer
     at 
    Ladeeda
  </li>
</div>
`;
